Fixed experience page on mobile

--- a/styles.css
+++ b/styles.css
@@ -627,6 +627,7 @@ b{
 @media only screen and (max-width: 600px){
 	.double-box{
 		flex-direction: column;
+		align-items: initial;
 	}
 }
 
@@ -1974,6 +1975,12 @@ b{
 }
 .three-boxes div h1{
 	font-size: 25px;
+}
+@media only screen and (max-width: 600px){
+	.three-boxes{
+		flex-direction: column;
+		align-items: center;
+	}
 }
 
 
